# meta-hq

./: .gitattributes  .gitignore  .readthedocs.yaml  404.html  LICENSE  README.md  environment.yml  index.html  makefile  metahq-cli.spec  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  scratch.py  sitemap.xml  test_labels.py
.github/workflows/: cli-test.yml  (+9 more)
INSTALL/: index.html
RETRIEVE/: index.html
SCRIPTS/: index.html
SEARCH/: index.html  search_index.json
data/: README.md  build_config.yaml  disign_atlas_subset.tsv  omicidx.duckdb
demo/: README.md
docs/: INSTALL.md  RETRIEVE.md  SCRIPTS.md  SEARCH.md  index.md
notebook/: manuscript_figures.ipynb  manuscript_figures.py  source_overlap__database-v1.0.2.py
results/: overlap_count__level-sample__attribute-age.tsv  overlap_count__level-sample__attribute-disease.tsv  overlap_count__level-sample__attribute-sex.tsv  overlap_count__level-sample__attribute-tissue.tsv  overlap_count__level-series__attribute-age.tsv  overlap_count__level-series__attribute-disease.tsv  overlap_count__level-series__attribute-sex.tsv  overlap_count__level-series__attribute-tissue.tsv  overlap_percent__level-sample__attribute-age.tsv  overlap_percent__level-sample__attribute-disease.tsv  overlap_percent__level-sample__attribute-sex.tsv  overlap_percent__level-sample__attribute-tissue.tsv  overlap_percent__level-series__attribute-age.tsv  overlap_percent__level-series__attribute-disease.tsv  overlap_percent__level-series__attribute-sex.tsv  overlap_percent__level-series__attribute-tissue.tsv  unique_propagated_tissue_disease_terms.txt
run/: get_all_propagated_tissue_disease_annotations.sh  get_all_tissue_disease_labels.sh
scripts/: analyze_unused.py  build_onto_duckdb.py  combined_series_anno_from_geo_sra.py  get_unique_propagated_tissue_disease_terms.py  search_macro.sql  source_counts.py  source_overlap.py
(+127 files in other folders)
